frontend/src/components/UserProfilePage/styles.module.scss
@import "src/utils/variables";

main {
  margin: $navbarHeight auto 0 auto;
  justify-content: center;
  display: flex;
  flex-direction: column;

  .pageContainer {
    width: 90%;
    max-width: 1190px;
    margin: 0 auto;
    display: flex;

    .leftSection {
      width: 290px;
    }

    .mainSection {
      //max-width: $main-width-page;
      //width: 620px;
      //margin: 0 10px;
      background-color: transparent;

      .coverPhoto {
        width: 100%;
        height: 190px;
        margin: 0 auto;
        object-fit: cover;
        background-color: #5aa6fb;
      }

      .userInfo {
        background-color: #fff;
        padding-left: 20px;
        padding-right: 20px;
        padding-bottom: 20px;
        margin-top: -80px;
        display: flex;
        flex-direction: column;
        border-radius: 8px;

        .photoAndActionsContainer {
          //background-color: #2c80d0;
          display: flex;
          justify-content: space-between;

          .profilePhoto {
            border-radius: 75px;
            border: 4px solid #fff;
            box-sizing: border-box;
            width: 150px;
            height: 150px;
            background-color: #fff;
          }

          .actionBtn {
            background-color: #5aa6fb;
            padding: 7px 11px;
            border-radius: 10px;
            color: #fff;
            font-size: 1rem;
            font-weight: bold;
            margin-top: 86px;
            margin-bottom: auto;

            &:hover {
              background-color: #2c80d0;
              cursor: pointer;
            }
          }
        }

        .fullname {
          font-size: 1.5rem;
          display: block;
          font-weight: 600;
        }

        .username {
          font-size: 1rem;
          color: #8e8e8e;
          display: block;
        }

        .description {
          margin-top: 16px;
          font-size: 1rem;
          color: #323232;
        }
      }
    }

    .rightSection {
      width: 290px;
    }
  }

}

